Add anchor retry logic
The version of Flatdoc currently in use doesn't move to the anchor tag after
generating the anchor tag. There was also no obvious Runner on complete
handler to hook into. Thus sometimes loading the documentation with an
anchor tag ready to scroll to does not result in scrolling.

This fixes the issue by adding retry logic with exponential backoff. The
default settings will retry jumping to the anchor if the user has not
yet scrolled for about 1.7 minutes and 100ms after page load at the
least.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     Flatdoc.run({
       fetcher: Flatdoc.github('pebble/pebblejs')
     });
+
+    $(function() {
+      function goToAnchor(timeout, retries, maxRetries) {
+        if (retries > maxRetries || window.scrollY !== 0 || window.location.hash === "") return;
+        window.location.href = window.location.hash;
+        timeout = timeout ? 2 * timeout : 100;
+        setTimeout(goToAnchor, timeout, timeout, (retries || 0) + 1, maxRetries || 10);
+      };
+      goToAnchor();
+    });
   </script>
 </head>
 <body role='flatdoc' class="large-brief">
